Поправил верстку, сделал её адаптивной

--- a/FootballMatchPredictor/Views/Auth/Register.cshtml
+++ b/FootballMatchPredictor/Views/Auth/Register.cshtml
@@ -37,7 +37,7 @@
                     <select asp-for="Gender" class="form-control" id="genderRegisterSelectId" data-minimum-results-for-search="Infinity" style="width:100%;">
                     </select>
                     <div class="form-text">
-                        Вы должны выбрать способ платежа
+                        Вы должны выбрать пол
                     </div>
                 </div>
                 <button type="button" class="btn  bg-indigo text-white" style="height:40px;"
