--- a/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
+++ b/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container mb-4 pb-5">
-    <div class="row coefficient-image mx-5 mb-4 br-40" style="height:450px;">
+    <div class="row coefficient-image mb-4 br-40" style="min-height:450px;">
         <div class="col-md-3 ms-3 mt-4">
             <a asp-controller="Match" asp-action="GetMatches"><i class="fa text-white fa-arrow-left fa-2x" aria-hidden="true"></i></a>
         </div>
