--- a/FootballMatchPredictor/Views/Home/Index.cshtml
+++ b/FootballMatchPredictor/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div style="min-height:2000px;">
-    <div class="row bg-dark p-4" style="height:900px;">
+    <div class="row bg-dark p-4" style="min-height:900px;">
         <div class="col-md-2">
         </div>
         <div class="col-md-4 col-sm-12 lh-base">
-            <h1 class="text-white" style="margin-top:145px; font-size:50px;">
+            <h1 class="text-white fs-1" style="margin-top:145px;">
                 Лучшие ставки<br /> на футбольные матчи
             </h1>
             <p class="fs-5 text-white my-5">
@@ -29,12 +29,17 @@
     </div>
     <div class="row pt-5">
         <div class="col-md-2">
-
+        </div>
+        <div class="col-md-8">
+            <p class="fw-bolder mt-5 pt-5 fs-1">
+                Лучшие коэффициенты!
+            </p>
+        </div>
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
         </div>
         <div class="col-md-4 py-5">
-            <h1 class="fw-bolder  mb-5" style="font-size:45px;">
-                Лучшие коэффициенты!
-            </h1>
             <p class="fs-5 lh-base my-4">
                 Добро пожаловать на наш сайт для ставок на футбол! Мы предлагаем широкий выбор событий и высокие коэффициенты для вашей игры.
             </p>
@@ -46,8 +51,8 @@
                 Сделать ставку!
             </button>
         </div>
-        <div class="col-md-4 pt-5">
-            <ul class="fs-5 list-marked" style=" line-height:95px; margin-top:95px;">
+        <div class="col-md-4 pt-4">
+            <ul class="fs-5 list-marked mt-5 lh-lg">
                 <li class="lh-sm">
                     Лучшие коэффициенты на рынке. Cледите за самыми точными прогнозами и окунитесь в захватывающий мир футбольных предсказаний.
                 </li>
@@ -64,7 +69,7 @@
     </div>
     <div class="row bg-dark p-4" style="min-height:700px;">
         <div class="col-md-2"></div>
-        <div class="col-md-8 pt-5" style="height:200px;">
+        <div class="col-md-8 pt-5" style="min-height:200px;">
             <p class="fs-1 text-white mt-5">
                 Что мы вам предоставляем!
             </p>
@@ -73,40 +78,40 @@
                 делая ставки на лучшие команды и игроков. Мы предлагаем широкий выбор событий и высокие коэффициенты для вашей игры.
             </p>
         </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2">
-            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+        <div class="col-md-2 col-sm-0"></div>
+        <div class="col-md-2 col-sm-0"></div>
+        <div class="col-md-2 col-sm-6">
+            <div class="border border-white br-40 text-white my-3 pt-4 text-break">
                 <i class="fa fa-star text-white fa-4x m-auto d-block text-center mt-4"></i>
                 <p class="m-3 fs-6" align="justify">
                     Коэффициенты – это ключевой показатель при выборе ставки на футбольный матч
                 </p>
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+        <div class="col-md-2 col-sm-6">
+            <div class="border border-white br-40 text-white my-3 pt-4 text-break">
                 <i class="fa fa-money text-white fa-4x m-auto d-block text-center mt-4"></i>
                 <p class="m-3 fs-6" align="justify">
                     Ставки на фатбольные матчи – это захватывающий способ испытать свою удачу и знания
                 </p>
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+        <div class="col-md-2 col-sm-6">
+            <div class="border border-white br-40 text-white my-3 pt-4 text-break">
                 <i class="fa fa-futbol-o text-white fa-4x m-auto d-block text-center mt-4"></i>
                 <p class="m-3 fs-6" align="justify">
                     Матчи – основной элемент футбольного мира, полный эмоций.
                 </p>
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="h-75 border border-white br-40 text-white my-3 pt-4">
+        <div class="col-md-2 col-sm-6">
+            <div class="border border-white br-40 text-white my-3 pt-4 text-break">
                 <i class="fa fa-percent text-white fa-4x m-auto d-block text-center mt-4"></i>
                 <p class="m-3 fs-6" align="justify">
                     Статистика – незаменимый инструмент для анализа прошлых результатов команд
                 </p>
             </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-2 col-sm-0"></div>
     </div>
 </div>
