--- a/FootballMatchPredictor/Views/Match/GetMatches.cshtml
+++ b/FootballMatchPredictor/Views/Match/GetMatches.cshtml
@@ -24,7 +24,7 @@
                 <p class="fw-bold">
                     Коэффициенты
                 </p>
-                <a type="button" class="btn bg-indigo br-40 text-white" asp-controller="Coefficient" asp-action="GetMatchCoefficients" asp-route-id="@match.Id">
+                <a type="button" class="btn bg-indigo br-40 text-white mb-3" asp-controller="Coefficient" asp-action="GetMatchCoefficients" asp-route-id="@match.Id">
                     Коэффициенты на этот матч
                 </a>
             </div>
