--- a/FootballMatchPredictor/Views/Match/GetTeamMatches.cshtml
+++ b/FootballMatchPredictor/Views/Match/GetTeamMatches.cshtml
@@ -5,10 +5,10 @@
     @foreach (var teamMatch in Model)
         {
         <div class="row bg-dark br-40 text-white mb-3 p-4">
-            <div class="col-md-3 w-25">
-                <img src="/images/team-match-picture.jpg" class="img-fluid d-block ms-3 br-40" style="height:100px;" />                            
+            <div class="col-md-3 text-center">
+                <img src="/images/team-match-picture.jpg" class="img-fluid d-block mx-auto br-40" style="height:100px;" />                            
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 text-center">
                 <p>
                     Первая команда: @teamMatch.Team1Name
                 </p>
