--- a/FootballMatchPredictor/Views/Team/GetAllTeams.cshtml
+++ b/FootballMatchPredictor/Views/Team/GetAllTeams.cshtml
@@ -8,10 +8,13 @@
 <div class="container">
     <div class="row text-center">
         <p class="fs-2 text-center mt-4">Команды</p>
-        <div class="col-md-12 text-center w-100">
-            <img src="https://sportishka.com/uploads/posts/2022-08/1660167882_1-sportishka-com-p-futbolnie-foni-sport-krasivo-foto-1.jpg" class="img-fluid br-40 w-50" />
+        <div class="col-md-2">
         </div>
-        
+        <div class="col-md-8 text-center">
+            <img src="https://sportishka.com/uploads/posts/2022-08/1660167882_1-sportishka-com-p-futbolnie-foni-sport-krasivo-foto-1.jpg" class="img-fluid br-40 w-100" />
+        </div>
+        <div class="col-md-2">
+        </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-12">
