Закончил серверную часть страницы админа

--- a/FootballMatchPredictor/Views/Bet/GetUserBets.cshtml
+++ b/FootballMatchPredictor/Views/Bet/GetUserBets.cshtml
@@ -29,7 +29,7 @@
                         @bet.CoefficientValue
                     </p>
                     <p>
-                        @bet.CoefficientReferDescription
+                        @bet.BetType
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -40,7 +40,7 @@
                         Сумма выигрыша: @bet.WinningAmount
                     </p>
                     <p>
-                        Тип ставки: @bet.BetTypeName
+                        Тип ставки: @bet.BetType
                     </p>
                 </div>
                 <div class="col-md-3">
