--- a/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
+++ b/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
@@ -49,7 +49,7 @@
                     @coefficient.CoefficientValue
                 </p>
                 <p>
-                    @coefficient.CoefficientReferDescription
+                    @coefficient.BetType
                 </p>
             </div>
             <div class="col-md-3">
@@ -58,8 +58,7 @@
                 {
                     <p>
                         Активен
-                    </p>
-                        
+                    </p>    
                 }
                 else
                 {
