--- a/FootballMatchPredictor/Views/UserProfile/GetUserProfile.cshtml
+++ b/FootballMatchPredictor/Views/UserProfile/GetUserProfile.cshtml
@@ -14,7 +14,7 @@
                 <nav aria-label="breadcrumb" class="bg-dark rounded-3 p-3 mb-4">
                     <ol class="breadcrumb mb-0">
                         <li class="breadcrumb-item text-white"><a asp-controller="Home" asp-action="Index">Главная</a></li>
-                        <li class="breadcrumb-item text-white"><a @(User.IsInRole("Admin") ? "" : "text-muted")> Страница админа</a></li>
+                        <li class="breadcrumb-item text-white"><a class="@(User.IsInRole("Admin") ? "" : "text-muted")" asp-controller="UserProfile" asp-action="GetAdminPage"> Страница админа</a></li>
                         <li class="breadcrumb-item text-white"><button class="all-unset text-white br-40" type="button"
                                     onclick="openModal({ url: '/Bet/WithdrawingMoney/', modalId: 'modalWindow', modalTitle:'Вывод денег'})"
                                     data-toggle="ajax-modal" data-target="Modal">
