--- a/FootballMatchPredictor/Views/Team/GetAllTeamsByAdmin.cshtml
+++ b/FootballMatchPredictor/Views/Team/GetAllTeamsByAdmin.cshtml
@@ -1,5 +1,53 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FootballMatchPredictor.Domain.ViewModels.Team
+
+@model IEnumerable<TeamViewModel>
+
+<div class="container pb-5">
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <p class="fs-3 text-center">
+                Команды
+            </p>
+        </div>
+        <div class="col-md-12 text-center">
+            <a class="btn bg-indigo br-40 text-white" role="button" asp-controller="UserProfile" asp-action="GetAdminPage">
+                Выход на страницу админа
+            </a>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <div class="table-responsive">
+                @if (Model.Count() == 0)
+                {
+                    <p class="fs-5">
+                        На данный момент никаких команд нет...
+                    </p>
+                }
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Id</th>
+                            <th scope="col">Название команды</th>
+                            <th scope="col">Страна</th>
+                            <th scope="col">Матчей сыиграно</th>
+                            <th scope="col">Матчей выиграно</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var team in Model)
+                        {
+                            <tr>
+                                <th scope="row">@team.Id</th>
+                                <td>@team.TeamName</td>
+                                <td>@team.CountryName</td>
+                                <td>@team.MatchesPlayed</td>
+                                <td>@team.MatchesWon</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
