--- a/FootballMatchPredictor/Views/User/GetAllUsers.cshtml
+++ b/FootballMatchPredictor/Views/User/GetAllUsers.cshtml
@@ -1,5 +1,69 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FootballMatchPredictor.Domain.ViewModels.User
+@model IEnumerable<UserViewModel>
+
+<div class="container pb-5">
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <p class="fs-3 text-center">
+                Пользователи
+            </p>
+        </div>
+        <div class="col-md-12 text-center">
+            <a class="btn bg-indigo br-40 text-white" role="button" asp-controller="UserProfile" asp-action="GetAdminPage">
+                Выход на страницу админа
+            </a>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <div class="table-responsive">
+                @if (Model.Count() == 0)
+                {
+                    <p class="fs-5">
+                        На данный момент пользователей нет...
+                    </p>
+                }
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Id</th>
+                            <th scope="col">Логин</th>
+                            <th scope="col">Имя</th>
+                            <th scope="col">Фамилия</th>
+                            <th scope="col">Пол</th>
+                            <th scope="col">Почта</th>
+                            <th scope="col">Роль</th>
+                            <th scope="col">Сумма выигрыша по ставкам</th>
+                            <th scope="col">Зарегистрирован в</th>
+                            <th scope="col">Действия</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var user in Model)
+                        {
+                            <tr>
+                                <th scope="row">@user.Id</th>
+                                <td>@user.Username</td>
+                                <td>@user.FirstName</td>
+                                <td>@user.SurName</td>
+                                <td>@user.Gender</td>
+                                <td>@user.Email</td>
+                                <td>@user.Role</td>
+                                <td>@user.WinningSum</td>
+                                <td>@user.CreatedAt</td>
+                                <td>
+                                    <form id="userDelete-@user.Id">
+                                        <input type="hidden" value="@user.Id" name="id"/>
+                                        <button class="btn bg-danger br-40 text-white" onclick="doActionWithConfirmation(event, { url: '/User/DeleteUser/@user.Id', formId: 'userDelete-@user.Id', confirmationTitle: 'удалить пользователя?' })">
+                                            Удалить
+                                        </button>
+                                    </form>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
